force-app/main/default/objects/Brizzi_Card__c/Brizzi_Card__c.object-meta.xml
<CustomObject>
    <label>Brizzi Card</label>
    <nameField>
        <displayFormat>BRIZZI-{0000000000}</displayFormat>
        <label>Replace Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brizzi Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>