force-app/main/default/objects/Brizzi_Card__c/fields/Nomor_Kartu_Brizzi_Baru__c.field-meta.xml
<CustomField>
    <fullName>Nomor_Kartu_Brizzi_Baru__c</fullName>
    <label>Nomor Kartu Brizzi Baru</label>
    <length>255</length>
    <type>Text</type>
</CustomField>