force-app/main/default/objects/Brizzi_Card__c/fields/Saldo__c.field-meta.xml
<CustomField>
    <fullName>Saldo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Saldo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>