force-app/main/default/objects/Brizzi_Card__c/fields/Saldo_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Saldo_Deposit__c</fullName>
    <label>Saldo Deposit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>