force-app/main/default/objects/Brizzi_Card__c/fields/Status_Replace__c.field-meta.xml
<CustomField>
    <fullName>Status_Replace__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Status Replace</label>
    <type>Checkbox</type>
</CustomField>