force-app/main/default/objects/Brizzi_Card__c/fields/Tipe_Kartu__c.field-meta.xml
<CustomField>
    <fullName>Tipe_Kartu__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipe Kartu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>