force-app/main/default/objects/Brizzi_Card__c/fields/UID__c.field-meta.xml
<CustomField>
    <fullName>UID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>